# RefinementTypes_llvm

./: .gitignore  CMakeLists.txt  README.txt
examples_refinement/: RefinementTypes.h
examples_refinement/safe/: branchTest.c  branchTest2.c  dependentTest.c  functionCallOneRefinementTest.c  functionCallTest.c  functionDiffTranslationUnit.c  functionSignatureTest.c  intPointerParamTest.c  intPointerReturnTest.c  intPointerTest.c  intPointerWriteTest.c  intPointerWriteTest2.c  intPointerWriteTest3.c  loopTest.c  loopTestInc2.c  loopTestInc2Odd.c  overflowTest.c  overflowTestTemp.c  pointerTest.c  selectTest.c  signedArithmeticTest.c  signedComparisonTest.c  simpleRecursionTest.c  simpleRecursionTest2.c  structTest.c  whileLoopTest.c
examples_refinement/unsafe/: overflowTestWrong.c  signedArithmeticTestWrong.c
include/llvm/: InitializePasses.h
include/llvm/ADT/: DenseSet.h
include/llvm/Transforms/LiquidFixpointBuilder/: FixpointConstraintBuilder.h  FunctionBlockGraph.h  RefinementUtils.h  ResultType.h  VariablesEnvironment.h  VariablesEnvironmentImmutable.h
include/llvm/Transforms/LiquidTypes/: AnalysisRetriever.h  Counter.h  FixpointConstraintBuilder.h  FixpointManager.h  FixpointType.h  FixpointTypeConvertor.h  FunctionBlockGraph.h  RefinementChecker.h  RefinementConstraintGenerator.h  RefinementFunctionAnalysisPass.h  RefinementFunctionInfo.h  RefinementFunctionSignatureAnalysisPass.h  RefinementFunctionSignatureInfo.h  RefinementInstructionConstraintGenerator.h  RefinementMacroUtils.h  RefinementMetadata.h  RefinementMetadataParser.h  RefinementMetadata_Raw.h  RefinementUtils.h  ResultType.h  VariablesEnvironment.h
lib/Passes/: LLVMBuild.txt
lib/Transforms/: CMakeLists.txt  LLVMBuild.txt
lib/Transforms/IPO/: LLVMBuild.txt  PassManagerBuilder.cpp
lib/Transforms/LiquidFixpointBuilder/: CMakeLists.txt  FixpointConstraintBuilder.cpp  FunctionBlockGraph.cpp  LLVMBuild.txt  VariablesEnvironment.cpp  VariablesEnvironmentImmutable.cpp
lib/Transforms/LiquidTypes/: AnalysisRetriever.cpp  CMakeLists.txt  FixpointConstraintBuilder.cpp  FixpointManager.cpp  FixpointTypeConvertor.cpp  FunctionBlockGraph.cpp  LLVMBuild.txt  RefinementChecker.cpp  RefinementConstraintGenerator.cpp  RefinementFunctionAnalysisPass.cpp  RefinementFunctionSignatureAnalysisPass.cpp  RefinementInstructionConstraintGenerator.cpp  RefinementMetadata.cpp  RefinementMetadataParser.cpp  RefinementMetadata_Raw.cpp  RefinementUtils.cpp  VariablesEnvironment.cpp
lib/Transforms/LiquidTypesParser/: CMakeLists.txt  LLVMBuild.txt  RefinementGrammar.g4  RefinementGrammar.tokens  RefinementGrammarBaseListener.cpp  RefinementGrammarBaseListener.h  RefinementGrammarBaseVisitor.cpp  RefinementGrammarBaseVisitor.h  RefinementGrammarLexer.cpp  RefinementGrammarLexer.h  RefinementGrammarListener.cpp  RefinementGrammarListener.h  RefinementGrammarParser.cpp  RefinementGrammarParser.h  RefinementGrammarVisitor.cpp  RefinementGrammarVisitor.h  RefinementParser.cpp  RefinementParser.h  generate.cmd
lib/Transforms/antlr-cpp-rt/: CMakeLists.txt  LLVMBuild.txt  Readme.txt
lib/Transforms/antlr-cpp-rt/src/: ANTLRInputStream.cpp  TokenStreamRewriter.h  UnbufferedCharStream.cpp
lib/Transforms/antlr-cpp-rt/src/support/: StringUtils.h
tools/bugpoint/: LLVMBuild.txt
tools/liquidTypes-varibleEnvLib-example/: CMakeLists.txt  LLVMBuild.txt  VariableEnvLib.cpp  VariableEnvLibImmutable.cpp  VariableEnvLib_IfExample.cpp  VariableEnvLib_IfExampleTwo.cpp  VariableEnvLib_IfImmutableExample.cpp  VariableEnvLib_LoopExample.cpp  VaribleEnvLibExample.cpp
