add_subdirectory(antlr-cpp-rt)
add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(LiquidTypesParser)
add_subdirectory(LiquidFixpointBuilder)
add_subdirectory(LiquidTypes)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
